# dynamic-library-repository

./: CMakeLists.txt  README.md
cmake/: llama.cmake
gollama/: CMakeLists.txt  REAME.md  binding.cpp  binding.h
llama/: CMakeLists.txt  REAME.md  binding.cpp  binding.h
